# soccer

./: .gitignore  ssh-tunnel.md  start-dev.sh  stop-dev.sh
backend/: README.md  app.py  eca_process.py  model_process.py  pyproject.toml  test_fix_clips.py  tsm_process.py
model/: .gitignore  base_train.py  eca_res50_model.py  eca_res50_train.py  eca_tsm.py  plot_training_results.py  split_data.py  temporal_shift.py  training_utils.py
model/logs/eca/: final_metrics_20250515_191535.json  training_log_20250515_191535.json
model/logs/res50/: final_metrics_20250515_155532.json  final_metrics_20250515_180439.json  final_metrics_20250515_191510.json  training_log_20250515_155532.json  training_log_20250515_180439.json  training_log_20250515_191510.json
model/logs/tsm/: training_log_20250518_125250.json
soccer-vue/: README.md  package-lock.json  package.json  vite.config.js
soccer-vue/src/: App.vue
soccer-vue/src/components/: ClipModeSelector.vue  DownloadLink.vue  ScorePanel.vue  VideoPreview.vue  VideoUpload.vue
